syntax= "proto3";

package proto;
import "service.proto";
import "google/protobuf/any.proto";

service ConfigMap{
    rpc CreateConfigMapService(ConfigMapService) returns (ServiceResponse){}
    rpc GetConfigMapService(ConfigMapService) returns (ServiceResponse){}
    rpc PutConfigMapService(ConfigMapService) returns (ServiceResponse){}
    rpc PatchConfigMapService(ConfigMapService) returns (ServiceResponse){}
    rpc DeleteConfigMapService(ConfigMapService) returns (ServiceResponse){}
}

message ConfigMapService {
    string service_id = 1;
    string token=2;
    string project_id=3;
    string company_id = 4;
    string name = 5;
    string service_type= 6;
    string service_sub_type =7;
    google.protobuf.Any service_dependency_info=8;
    string namespace =9;
    string version =10;
    ConfigMapServiceAttributes service_attribute =11;
}

message ConfigMapServiceAttributes {
    map<string,string> data =1;
}